[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "claude-history-browser"
version = "2.0.0"
description = "Keyboard-driven TUI for browsing, exporting, and importing Claude Code conversation history"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "prompt_toolkit>=3.0",
    "wcwidth>=0.2",
]
